# ai-act-compliance-agents

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  METHODOLOGY.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  SOURCES.md  pyproject.toml
agents/: conformity-checker.md  oversight-designer.md  post-market-monitor.md  risk-classifier.md  safety-mapper.md
commands/: audit-prep.md  classify-risk.md  conformity-gap.md  oversight-plan.md  post-market-plan.md  safety-map.md  tech-doc.md  trace.md
contexts/: engineer-mode.md  exec-mode.md  regulator-mode.md
docs/: METHODOLOGY.md  PUBLIC_RELEASE_CHECKLIST.md  traceability-input.md
docs/releases/: v0.1.0.md
examples/: audit-prep-dossier.md  classification-aeb-vision-component.md  classification-voxos-fleet-recruiter.md  conformity-workpaper-voxos-fleet-recruiter.yaml  oversight-voxos-fleet-recruiter.md  pmm-plan-voxos-fleet-recruiter.yaml  safety-trace-aeb-annex-i.md  sample-requirements.json  technical-file-voxos-fleet-recruiter.md
rules/common/: cite-the-article.md  conservative-classification.md  evidence-not-opinion.md  name-the-human-overseer.md  review-boundary.md  traceability.md  uncertainty.md  version-the-document.md
schemas/: ai-system-classification.json  conformity-assessment-row.json  pmm-incident.json  traceability.schema.json
scripts/: classify_cli.py  traceability_check.py
skills/conformity-assessment-checklist/: SKILL.md
skills/eu-ai-act-risk-classification/: SKILL.md
skills/human-oversight-design-patterns/: SKILL.md
skills/iso26262-21448-mapping/: SKILL.md
skills/post-market-monitoring-plan/: SKILL.md
templates/: post-market-monitoring-plan.md  technical-documentation.md
tests/: test_core.py
(+4 files in other folders)
