[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-act-compliance-agents"
version = "0.1.0"
description = "Automotive AI compliance drafting and traceability helpers"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ai-act-trace = "ai_act_compliance_agents.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
